tests/urlparsers/test.c
/* Generated by re2c 1.3 on Thu Feb 20 15:46:53 2020 */
#line 1 "src/urlparsers/test.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include "gears_util.h"


#define YYMAXFILL 72

static const size_t SIZE = 4096;

typedef struct {
    FILE *file;
    char *buf;
    char *lim;
    char *cur;
    char *mar;
    char *tok;
    char *yyt1;
char *yyt10;
char *yyt11;
char *yyt12;
char *yyt13;
char *yyt14;
char *yyt15;
char *yyt16;
char *yyt17;
char *yyt18;
char *yyt19;
char *yyt2;
char *yyt20;
char *yyt3;
char *yyt4;
char *yyt5;
char *yyt6;
char *yyt7;
char *yyt8;
char *yyt9;

    int eof;
} input_t;

static void init_input(input_t *in, const char *fname)
{
    in->file = fopen(fname, "r");
    in->buf = (char*) malloc(SIZE + YYMAXFILL);
    in->lim = in->buf + SIZE;
    in->cur = in->lim;
    in->mar = in->lim;
    in->tok = in->lim;
    in->yyt1 = 0;
in->yyt10 = 0;
in->yyt11 = 0;
in->yyt12 = 0;
in->yyt13 = 0;
in->yyt14 = 0;
in->yyt15 = 0;
in->yyt16 = 0;
in->yyt17 = 0;
in->yyt18 = 0;
in->yyt19 = 0;
in->yyt2 = 0;
in->yyt20 = 0;
in->yyt3 = 0;
in->yyt4 = 0;
in->yyt5 = 0;
in->yyt6 = 0;
in->yyt7 = 0;
in->yyt8 = 0;
in->yyt9 = 0;

    in->eof = 0;
}

static void free_input(input_t *in)
{
    free(in->buf);
    fclose(in->file);
}

static int fill(input_t *in, size_t need)
{
    size_t free;
    if (in->eof) return 1;

    free = in->tok - in->buf;
    if (free < need) return 2;

    memmove(in->buf, in->tok, in->lim - in->tok);
    in->lim -= free;
    in->cur -= free;
    in->mar -= free;
    in->tok -= free;
    if (in->yyt1) in->yyt1 -= free;
if (in->yyt10) in->yyt10 -= free;
if (in->yyt11) in->yyt11 -= free;
if (in->yyt12) in->yyt12 -= free;
if (in->yyt13) in->yyt13 -= free;
if (in->yyt14) in->yyt14 -= free;
if (in->yyt15) in->yyt15 -= free;
if (in->yyt16) in->yyt16 -= free;
if (in->yyt17) in->yyt17 -= free;
if (in->yyt18) in->yyt18 -= free;
if (in->yyt19) in->yyt19 -= free;
if (in->yyt2) in->yyt2 -= free;
if (in->yyt20) in->yyt20 -= free;
if (in->yyt3) in->yyt3 -= free;
if (in->yyt4) in->yyt4 -= free;
if (in->yyt5) in->yyt5 -= free;
if (in->yyt6) in->yyt6 -= free;
if (in->yyt7) in->yyt7 -= free;
if (in->yyt8) in->yyt8 -= free;
if (in->yyt9) in->yyt9 -= free;

    in->lim += fread(in->lim, 1, free, in->file);
    if (in->lim < in->buf + SIZE) {
        in->eof = 1;
        memset(in->lim, 0, YYMAXFILL);
        in->lim += YYMAXFILL;
    }
    return 0;
}

static int lex(input_t *in, long *count)
{
	gears_tag();

    const char
        *s1, *u1, *h1, *h3, *h5, *r1, *p1, *p3, *q1, *f1,
        *s2, *u2, *h2, *h4, *h6, *r2, *p2, *p4, *q2, *f2;
    long c;

    c = 0;
loop:
    in->tok = in->cur;

#line 139 "<stdout>"
{
	char yych;
	unsigned int yyaccept = 0;
	if ((in->lim - in->cur) < 72) if (fill(in, 72) != 0) return 2;
	yych = *in->cur;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\n':	goto yy6;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		in->yyt1 = in->cur;
		goto yy8;
	default:	goto yy4;
	}
yy2:
	++in->cur;
#line 137 "src/urlparsers/test.re"
	{ *count = c; return 0; }
#line 208 "<stdout>"
yy4:
	++in->cur;
yy5:
#line 136 "src/urlparsers/test.re"
	{ return 1; }
#line 214 "<stdout>"
yy6:
	++in->cur;
#line 138 "src/urlparsers/test.re"
	{ goto loop; }
#line 219 "<stdout>"
yy8:
	yyaccept = 0;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy10;
	default:	goto yy5;
	}
yy9:
	++in->cur;
	if ((in->lim - in->cur) < 71) if (fill(in, 71) != 0) return 2;
	yych = *in->cur;
yy10:
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy9;
	case ':':
		in->yyt2 = in->cur;
		goto yy12;
	default:	goto yy11;
	}
yy11:
	in->cur = in->mar;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 
		in->yyt3 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt4 = in->yyt5 = in->cur;
		goto yy13;
	case 2: 
		in->yyt3 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt5 = in->cur;
		goto yy13;
	case 3: 
		in->yyt7 = in->yyt8 = in->cur;
		goto yy13;
	case 4: 
		in->yyt7 = in->yyt8 = NULL;
		in->yyt6 = in->yyt20 = in->cur;
		goto yy13;
	case 5: 
		in->yyt8 = in->cur;
		goto yy13;
	case 6: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt15 = in->yyt16 = in->yyt19 = in->cur;
		goto yy13;
	case 7: 
		in->yyt7 = in->yyt8 = NULL;
		in->yyt6 = in->cur;
		goto yy13;
	case 8: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt16 = in->yyt19 = in->cur;
		goto yy13;
	case 9: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt20 = NULL;
		in->yyt3 = in->cur;
		goto yy13;
	case 10: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt20 = NULL;
		in->yyt3 = in->yyt17 = in->yyt18 = in->yyt19 = in->cur;
		goto yy13;
	case 11: 
		in->yyt9 = in->yyt3;
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt15 = in->yyt16 = in->yyt19 = in->cur;
		goto yy13;
	case 12: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt20 = NULL;
		in->yyt3 = in->yyt18 = in->yyt19 = in->cur;
		goto yy13;
	case 13: 
		in->yyt9 = in->yyt3;
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt16 = in->yyt19 = in->cur;
		goto yy13;
	case 14: 
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt11 = in->yyt12 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt14 = in->yyt19 = in->cur;
		goto yy13;
	default:
		in->yyt9 = in->yyt3;
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt11 = in->yyt12 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt14 = in->yyt19 = in->cur;
		goto yy13;
	}
yy12:
	yyaccept = 1;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':
		in->yyt4 = in->cur;
		goto yy14;
	case '#':
		in->yyt3 = in->yyt6 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt4 = in->yyt5 = in->cur;
		goto yy16;
	case '%':
		in->yyt4 = in->cur;
		goto yy17;
	case '/':
		in->yyt4 = in->cur;
		goto yy18;
	case '?':
		in->yyt3 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = NULL;
		in->yyt4 = in->yyt5 = in->cur;
		goto yy19;
	default:
		in->yyt3 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt4 = in->yyt5 = in->cur;
		goto yy13;
	}
yy13:
	s1 = in->yyt1;
	s2 = in->yyt2;
	u1 = in->yyt9;
	u2 = in->yyt10;
	h1 = in->yyt11;
	h2 = in->yyt12;
	h3 = in->yyt13;
	h4 = in->yyt14;
	h5 = in->yyt15;
	h6 = in->yyt16;
	r1 = in->yyt17;
	r2 = in->yyt18;
	p1 = in->yyt19;
	p2 = in->yyt3;
	p3 = in->yyt4;
	p4 = in->yyt5;
	q1 = in->yyt20;
	q2 = in->yyt6;
	f1 = in->yyt7;
	f2 = in->yyt8;
#line 139 "src/urlparsers/test.re"
	{
        ++c;
        printf("URI %ld:\n", c);
        printf("  scheme:   %.*s\n", (int)(s2 - s1), s1);
        if (u1) printf("  userinfo: %.*s\n", (int)(u2 - u1), u1);
        if (h1) printf("  host:     %.*s (IP literal)\n", (int)(h2 - h1), h1);
        if (h3) printf("  host:     %.*s (IPv4)\n", (int)(h4 - h3), h3);
        if (h5) printf("  host:     %.*s (name)\n", (int)(h6 - h5), h5);
        if (r1) printf("  port:     %.*s\n", (int)(r2 - r1), r1);
        if (p1) printf("  path:     %.*s\n", (int)(p2 - p1), p1);
        if (p3) printf("  path:     %.*s\n", (int)(p4 - p3), p3);
        if (q1) printf("  query:    %.*s\n", (int)(q2 - q1), q1);
        if (f1) printf("  fragment: %.*s\n", (int)(f2 - f1), f1);
        printf("\n");
        goto loop;
    }
#line 576 "<stdout>"
yy14:
	yyaccept = 2;
	in->mar = ++in->cur;
	if ((in->lim - in->cur) < 3) if (fill(in, 3) != 0) return 2;
	yych = *in->cur;
yy15:
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy14;
	case '#':
		in->yyt3 = in->yyt6 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt5 = in->cur;
		goto yy16;
	case '%':	goto yy17;
	case '?':
		in->yyt3 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = NULL;
		in->yyt5 = in->cur;
		goto yy19;
	default:
		in->yyt3 = in->yyt6 = in->yyt7 = in->yyt8 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt15 = in->yyt16 = in->yyt17 = in->yyt18 = in->yyt19 = in->yyt20 = NULL;
		in->yyt5 = in->cur;
		goto yy13;
	}
yy16:
	yyaccept = 3;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '?':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':
		in->yyt7 = in->cur;
		goto yy20;
	case '%':
		in->yyt7 = in->cur;
		goto yy22;
	default:
		in->yyt7 = in->yyt8 = in->cur;
		goto yy13;
	}
yy17:
	++in->cur;
	if (in->lim <= in->cur) if (fill(in, 1) != 0) return 2;
	yych = *in->cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy23;
	default:	goto yy11;
	}
yy18:
	yyaccept = 2;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '/':	goto yy24;
	default:	goto yy15;
	}
yy19:
	yyaccept = 4;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '?':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':
		in->yyt20 = in->cur;
		goto yy25;
	case '#':
		in->yyt6 = in->yyt20 = in->cur;
		goto yy16;
	case '%':
		in->yyt20 = in->cur;
		goto yy27;
	default:
		in->yyt7 = in->yyt8 = NULL;
		in->yyt6 = in->yyt20 = in->cur;
		goto yy13;
	}
yy20:
	yyaccept = 5;
	in->mar = ++in->cur;
	if (in->lim <= in->cur) if (fill(in, 1) != 0) return 2;
	yych = *in->cur;
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '/':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '?':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy20;
	case '%':	goto yy22;
	default:
		in->yyt8 = in->cur;
		goto yy13;
	}
yy22:
	++in->cur;
	if (in->lim <= in->cur) if (fill(in, 1) != 0) return 2;
	yych = *in->cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy28;
	default:	goto yy11;
	}
yy23:
	++in->cur;
	if (in->lim <= in->cur) if (fill(in, 1) != 0) return 2;
	yych = *in->cur;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy14;
	default:	goto yy11;
	}
yy24:
	yyaccept = 6;
	yych = *(in->mar = ++in->cur);
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt15 = in->cur;
		goto yy29;
	case '#':
		in->yyt4 = in->yyt5 = in->yyt6 = in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = in->yyt20 = NULL;
		in->yyt3 = in->yyt15 = in->yyt16 = in->yyt19 = in->cur;
		goto yy16;
	case '%':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt15 = in->cur;
		goto yy31;
	case '/':
		in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = in->yyt17 = in->yyt18 = NULL;
		in->yyt15 = in->yyt16 = in->yyt19 = in->cur;
		goto yy32;
	case '0':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt13 = in->yyt15 = in->cur;
		goto yy34;
	case '1':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt13 = in->yyt15 = in->cur;
		goto yy35;
	case '2':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt13 = in->yyt15 = in->cur;
		goto yy36;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
		in->yyt9 = in->yyt10 = NULL;
		in->yyt3 = in->yyt13 = in->yyt15 = in->cur;
		goto yy37;
	case ':':
		in->yyt9 = in->yyt10 = in->yyt11 = in->yyt12 = in->yyt13 = in->yyt14 = NULL;
		in->yyt3 = in->yyt15 = in->yyt16 = in->cur;
